Add build files

--- a/src/app/receipt-items/receipt-items.component.html
+++ b/src/app/receipt-items/receipt-items.component.html
@@ -47,7 +47,7 @@
         matSuffix
         mat-icon-button
         aria-label="Clear"
-        (click)="itemPrice = ''"
+        (click)="itemPrice = 0"
       >
         <mat-icon>close</mat-icon>
       </button>
