Revert "Add build files"
This reverts commit 596e86280cde78780156bc165c6c210af537860a.

--- a/src/app/receipt-items/receipt-items.component.html
+++ b/src/app/receipt-items/receipt-items.component.html
@@ -47,7 +47,7 @@
         matSuffix
         mat-icon-button
         aria-label="Clear"
-        (click)="itemPrice = 0"
+        (click)="itemPrice = ''"
       >
         <mat-icon>close</mat-icon>
       </button>
