--- a/src/app/dialog-already-exists/dialog-already-exists.component.html
+++ b/src/app/dialog-already-exists/dialog-already-exists.component.html
@@ -1,11 +1,11 @@
 <h2 mat-dialog-title>{{ headerMessage }}</h2>
 <mat-dialog-content>
   <div>{{ message }}</div>
-  <br />
+  <br *ngIf="message1" />
   <div *ngIf="message1">{{ message1 }}</div>
-  <br />
+  <br *ngIf="message2" />
   <div *ngIf="message2">{{ message2 }}</div>
-  <br />
+  <br *ngIf="message3" />
   <div *ngIf="message3">{{ message3 }}</div>
 </mat-dialog-content>
 <button mat-button mat-dialog-close>{{ buttonMessage }}</button>
